--- a/projectClient/package.json
+++ b/projectClient/package.json
@@ -1,12 +1,15 @@
 {
   "name": "project1",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "jest"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": "",
+  "devDependencies": {
+    "jest": "^26.0.1"
+  }
 }
