--- a/project-server/package.json
+++ b/project-server/package.json
@@ -9,7 +9,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "axios": "^0.20.0"
+  },
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.1.5",
     "jest": "^26.0.1"
